crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/invalid_toml_structure_tree.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDOUT ===
➖ [invalid fe.toml]

=== STDERR ===
❌ Invalid fe.toml file at file://<project>/crates/fe/tests/fixtures/cli_output/ingots/invalid_toml_structure/: TOML parse error at line 1, column 7
  |
1 | [ingot
  |       ^
invalid table header
expected `.`, `]`


=== EXIT CODE: 0 ===
